# llmaixweb

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CITATION.cff  DEPLOY.md  DEVELOPER.md  Dockerfile.backend  Dockerfile.backend.cpu  Dockerfile.frontend  README.md  THIRD_PARTY_NOTICES.md  USAGE.md  alembic.ini  compose.deepseek.yml  compose.dev.yml  compose.gpu.yml  compose.vllm.yml  compose.yml  docker-compose.cpu.yml  docker-compose.gpu.yml  eslint.config.js  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts  pyproject.toml  pytest.ini  test_docling_serve.py  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/: SECURITY.md  dependabot.yml
.github/workflows/: docker-publish.yml  docs.yml  security.yml  tests.yml
alembic/: env.py
alembic/versions/: 2d2bfbbdcc04_initial.py  add_created_at_to_file_prep_task.py  add_document_versioning.py  add_file_task_heartbeat.py  add_fk_indexes_2026_06_19.py  add_fk_ondelete_2026_06_24.py  add_perf_indexes_2026_06_16.py  add_project_id_indexes.py  add_trial_schema_prompt_snapshot.py  audit_and_error_logs_2026_07_09.py  bfa301b18a99_add_document_ids_to_file_preprocessing_.py  e8f7497b6858_increase_error_message_length_and_add_.py  f9a8b2c3d4e5_add_warnings_field_to_file_preprocessing_task.py  f9a8b2c3d4e6_remove_legacy_preprocessing_config_fields.py  f9a8b2c3d4e7_add_token_version_to_users.py  f9a8b2c3d4e8_add_password_reset_tokens_table.py  f9a8b2c3d4e9_increase_trial_column_lengths.py  file_task_document_set_2026_07_13.py  fix_doc_version_index.py  fix_document_unique_constraint.py  fix_ts_defaults_2026_07_07.py  fk_indexes_2026_07_17.py  invitation_expiry.py  junction_fk_ondelete_2026_06_29.py  preprocessing_task_api_key_encrypted.py  rename_trial_apikey.py  schema_drift_2026_07_20.py  sso_and_auth_hardening_2026_06_30.py  trial_document_set_setnull.py  trial_project_number.py  trial_result_status.py
backend/: .env.e2e  .env.localtest.example
backend/scripts/: populate_users.py  run_migrations.sh
backend/src/: _version.py  dependencies.py  main.py  websocket_manager.py
backend/tests/: .env  conftest.py  fake_llm.py  helpers.py  test_admin_api.py  test_audit_admin_export.py  test_auth.py  test_celery_integration.py  test_chunking_integration.py  test_config_secret_redaction.py  test_crypto.py  test_csv_safety.py  test_docling_serve_client.py  test_docling_service.py  test_document_restore.py  test_documents.py  test_download_safety.py  test_email_service.py  test_evaluation_engine_unit.py  test_evaluation_metrics.py  test_evaluation_pipeline.py  test_evaluations_api.py  test_field_mapping.py  test_file_batch_ops.py  test_files.py  test_general_api.py  test_ground_truth_parser.py  test_groundtruth_api.py  test_helpers_unit.py  test_info_extraction_unit.py  test_json_utils.py  test_llm.py  test_llm_endpoints.py  test_llm_vision_ocr_service.py  test_mistral_ocr_service.py  test_oidc_service_unit.py  test_pdf_text_probe.py  test_preprocessing.py  test_preprocessing_dispatch.py  test_preprocessing_timeout.py  (+18 more)
docs/: AUDIT_LOGGING.md  DATA_FLOW.md  DATA_RETENTION.md  DPIA_TEMPLATE.md  RISK_REGISTER.md  SECURITY.md  THREAT_MODEL.md  index.md
docs/admin/: celery.md  index.md  settings.md  sso.md  user-management.md
docs/development/: architecture.md  contributing.md  developer-guide.md
docs/getting-started/: concepts.md  index.md  installation.md  quickstart.md
docs/operations/: backup-restore.md  configuration.md  deployment.md  requirements.md  troubleshooting.md  upgrading.md
docs/user-guide/: account.md  documents.md  evaluation.md  files.md  ground-truth.md  index.md  ocr-engines.md  preprocessing.md  schemas-and-prompts.md  trials.md
e2e/: README.md
e2e/screenshots/: workflow.screens.spec.ts
e2e/support/: api.ts  fake-llm.mjs  reset.mjs
e2e/tests/: workflow.spec.ts
frontend/: .env  App.vue  config.js.template  docker-entrypoint.sh  index.html  jsconfig.json  main.js  main.ts  nginx.conf  nginx.conf.template  tailwind.config.js  update-version.js  version.js  version.ts  vite.config.js
frontend/assets/: ag-grid.css  base.css  main.css
frontend/components/: ActivityBell.vue  ConfirmationDialog.vue  CreateProjectButton.vue  CreateTrialModal.vue  DocumentAnalysis.vue  DocumentDetailsModal.vue  DocumentEvaluationModal.vue  DocumentsManagement.vue  EmptyState.vue  ErrorBanner.vue  EvaluationAnalysisModal.vue  EvaluationDetailsModal.vue  EvaluationErrorsModal.vue  EvaluationOverview.vue  EvaluationView.vue  FieldErrorAnalysis.vue  FieldErrorsModal.vue  FilesAndProcessing.vue  FilesManagement.vue  GroundTruthManager.vue  GroundTruthPreviewModal.vue  GroundTruthUploadModal.vue  IndividualDocumentView.vue  InvitationGrid.vue  InvitationsGrid.vue  JsonViewer.vue  LoadingSpinner.vue  MetricsExportModal.vue  ModalDialog.vue  PreprocessingManagement.vue  ProjectEditModal.vue  ProjectGrid.vue  ProjectSettingsModal.vue  ProjectWorkflow.vue  PropertyDetailsEditor.vue  SchemaBlock.vue  SchemaManagement.vue  SchemaTree.vue  SimpleSchemaEditor.vue  Tooltip.vue  (+7 more)
frontend/composables/: useClickOutside.ts  useDebouncedSearch.js  useDebouncedSearch.test.ts  useDebouncedSearch.ts  useDocumentPagination.js  useDocumentPagination.ts  useFileDownload.js  useFileDownload.ts  useFileToasts.js  useGridTheme.js  useLocale.ts  useModelTesting.js  useModelTesting.ts  useNavContext.ts  usePagination.js  usePagination.test.ts  usePagination.ts  usePreprocessingUpdates.js  usePreprocessingUpdates.ts  useSchemaKeyboard.js  useSchemaKeyboard.ts  useScrollFade.ts  useScrollLock.js  useScrollLock.ts  useTableClasses.js  useTableClasses.ts  useToast.js  useToast.ts  useTrialUpdates.js  useTrialUpdates.ts  useWsEntityUpdates.js  useWsEntityUpdates.ts
frontend/i18n/: index.ts
frontend/locales/: de.json  en.json  es.json  fr.json
frontend/router/: index.js  index.ts
frontend/services/: adminApi.js  adminApi.ts  api.js  api.ts  (+33 more)
scripts/: generate-third-party-notices.sh  i18n-check.mjs  i18n-merge-errors.mjs  i18n-merge.mjs  i18n-usage-check.mjs
(+349 files in other folders)
