[project]
name = "llmaixweb"
version = "0.4.1"
description = "LLM Information Extraction Web Application"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]==0.138.2",
    "uvicorn==0.49.0",
    "pyjwt==2.13.0",
    "sqlalchemy==2.0.51",
    "psycopg[binary,pool]==3.3.4",
    "pydantic_settings==2.14.2",
    "openai==2.44.0",
    "bcrypt==5.0.0",
    "boto3==1.43.38",
    "mistralai==2.5.0",
    "pypdf==6.14.2",
    "redis==8.0.1",
    "celery==5.6.3",
    "jsonschema==4.26.0",
    "thefuzz==0.22.1",
    "pandas==3.0.3",
    "xlsxwriter==3.2.9",
    "alembic==1.18.5",
    "slowapi==0.1.10",
    "cryptography==49.0.0",
    "rtree==1.4.1",
    "torch==2.12.1",
    "torchvision==0.27.1",
    "scipy==1.18.0",
    "opencv-python-headless==4.13.0.92",
    "pymupdf==1.28.0",
    "httpx2==2.5.0",
    "pydantic==2.13.4",
    "requests==2.34.2",
    "websockets==16.0"
]

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "ty==0.0.55",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "isort==8.0.1",
    "boto3-stubs==1.43.37",
    "pandas-stubs==3.0.3.260530",
    "celery-types==0.26.0",
    # Docling for local fallback during tests (when docling-serve unavailable)
    "docling-slim[format-pdf,format-office,format-web,format-latex,models-local,cli,format-email]==2.107.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length - too strict for strings/comments

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F405"]  # Alembic context is injected at runtime
"backend/src/core/config.py" = ["N802"]  # Pydantic property naming
"backend/src/schemas/**/*.py" = ["N805"]  # Pydantic validators use cls
"backend/src/routers/v1/endpoints/documents.py" = ["N806"]  # Type aliases (D, F)
"backend/src/routers/v1/endpoints/files.py" = ["N806"]  # Type aliases (CLIP)
"backend/src/routers/v1/endpoints/projects.py" = ["N806"]  # Type aliases (D, F, T, TR, CLIP)
"backend/src/routers/v1/endpoints/trials.py" = ["N806"]  # Type aliases (T, TR)
