[project]
name = "llmaixweb"
version = "0.7.1"
description = "LLM Information Extraction Web Application — extract structured JSON from unstructured medical/lab documents with LLMs."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "KatherLab" },
]
maintainers = [
  {name = "Fabian Wolf", email = "fabian.wolf2@tu-dresden.de"}
]
keywords = [
    "llm",
    "information-extraction",
    "ocr",
    "medical-nlp",
    "structured-extraction",
    "json-schema",
    "fastapi",
    "vue",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "fastapi[standard]==0.139.2",
    "uvicorn==0.51.0",
    "pyjwt==2.13.0",
    "sqlalchemy==2.0.51",
    "psycopg[binary,pool]==3.3.4",
    "pydantic_settings==2.14.2",
    "openai==2.46.0",
    "bcrypt==5.0.0",
    "boto3==1.43.53",
    "mistralai==2.7.1",
    "pypdf==6.14.2",
    "redis==8.0.1",
    "celery==5.6.3",
    "jsonschema==4.26.0",
    "thefuzz==0.22.1",
    "pandas==3.0.3",
    "xlsxwriter==3.2.9",
    "alembic==1.18.5",
    "slowapi==0.1.10",
    "cryptography==49.0.0",
    "pillow==12.3.0",
    "pymupdf==1.28.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "requests==2.34.2",
    "websockets==16.1.1",
    "openpyxl==3.1.5"
]

[project.urls]
Homepage = "https://github.com/KatherLab/llmaixweb"
Repository = "https://github.com/KatherLab/llmaixweb"
Issues = "https://github.com/KatherLab/llmaixweb/issues"
Documentation = "https://github.com/KatherLab/llmaixweb#readme"

[dependency-groups]
dev = [
    "ruff==0.15.22",
    "ty==0.0.62",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "httpx2==2.7.0",
    "boto3-stubs==1.43.53",
    "pandas-stubs==3.0.3.260530",
    "celery-types==0.26.0",
    # Docling for local fallback during tests (when docling-serve unavailable).
    # The heavy ML runtime deps below are docling's transitive requirements and
    # are NOT imported anywhere in backend/src — they belong in dev alongside
    # docling so the production image (`uv sync --no-dev`) doesn't ship ~1GB of
    # unused torch/opencv/scipy. torch/torchvision are declared explicitly so the
    # CPU-index pin in [tool.uv.sources] applies (avoids the huge CUDA build).
    "docling-slim[format-pdf,format-office,format-web,format-latex,models-local,cli,format-email]==2.114.0",
    "torch==2.13.0",
    "torchvision==0.28.0",
    "scipy==1.18.0",
    "opencv-python-headless==5.0.0.93",
    "rtree==1.4.1",
]
docs = [
    "mkdocs-material==9.7.7",
    "mkdocs-include-markdown-plugin==7.3.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length - too strict for strings/comments

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F405"]  # Alembic context is injected at runtime
"backend/src/core/config.py" = ["N802"]  # Pydantic property naming
"backend/src/schemas/**/*.py" = ["N805"]  # Pydantic validators use cls
"backend/src/routers/v1/endpoints/documents.py" = ["N806"]  # Type aliases (D, F)
"backend/src/routers/v1/endpoints/files.py" = ["N806"]  # Type aliases (CLIP)
"backend/src/routers/v1/endpoints/projects.py" = ["N806"]  # Type aliases (D, F, T, TR, CLIP)
"backend/src/routers/v1/endpoints/trials.py" = ["N806"]  # Type aliases (T, TR)
